docs(api): add docs for user controllers
