# router/api/v1/endpoints/endpoints.go
@@ -1,4 +1,4 @@
-package main
+package endpoints
 
 import (
 	"github.com/TechMinerApps/upmaster/models"
